--- a/dominoui/plugins/morrisjs/less/morris.core.less
+++ b/dominoui/plugins/morrisjs/less/morris.core.less
@@ -6,7 +6,7 @@
     border-radius: 10px;
     padding: 6px;
     color: #666;
-    badgeBackground: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.8);
     border: solid 2px rgba(230, 230, 230, 0.8);
 
     font-family: sans-serif;
