--- a/domino-ui/css/style.css
+++ b/domino-ui/css/style.css
@@ -7733,7 +7733,10 @@ fieldset[disabled] .form-control {
 .bootstrap-notify-container {
   max-width: 320px;
   text-align: center;
-z-index: 999999999999999;}
+z-index: 999999999999999;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
 
 /* Jquery Nestable ============================= */
 .dd-handle {
